[workspace]
members = [
    "tui",
]


[package] # TODO: split into another crate once web becomes a thing
name = "utp-tui"
version = "0.1.0"

default-run = "tui"

# TODO: CI for this binary
[[bin]]
name = "tui"
path = "bins/tui.rs"


[dependencies]
flexi_logger = { version = "0.14", default_features = false }
structopt = { version = "0.3", default-features = false }
failure = "0.1.6"

lc3-application-support = { git = "https://github.com/ut-utp/prototype", branch = "staging", version = "0.1.0" }
# TODO: grab the above from crates.io instead of git
# TODO: get rid of the staging thing
lc3-tui = { path = "tui", version = "0.1.0" }
# TODO: grab the above from crates.io instead of by path


[profile.release]
opt-level = 3
debug = true
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1
# target-cpu = "native"
# panic = "abort"
incremental = false
overflow-checks = false

# TODO: remove this
# [patch."https://github.com/ut-utp/prototype"]
# lc3-application-support = { git = "https://github.com/ut-utp/prototype", branch = "feat-trap-tests" }
