[workspace]
members = [
    "tui",
    "bins/desktop",
    "bins/web",
]


[profile.release]
opt-level = 3
debug = true
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1
# target-cpu = "native"
# panic = "abort"
incremental = false
overflow-checks = false


[patch.crates-io]
lc3-application-support = { git = "https://github.com/ut-utp/core", branch = "master" }
lc3-isa = { git = "https://github.com/ut-utp/core", branch = "master" }
lc3-macros = { git = "https://github.com/ut-utp/core", branch = "master" }
lc3-shims = { git = "https://github.com/ut-utp/core", branch = "master" }
lc3-traits = { git = "https://github.com/ut-utp/core", branch = "master" }
lc3-os = { git = "https://github.com/ut-utp/core", branch = "master" }
lc3-assembler = { git = "https://github.com/ut-utp/assembler", branch = "master" }

wasm-bindgen = { git = "https://github.com/rrbutani/wasm-bindgen.git", branch = "patches" }
crossterm = { git = "https://github.com/rrbutani/crossterm", branch = "xtermjs", version = "0.17.5" }
tui = { git = "https://github.com/rrbutani/tui-rs", version = "0.9.5" }
xterm-js-sys = { git = "https://github.com/rrbutani/xterm-js-sys", branch = "main" }
