[package]
name = "lc3-tui"
version = "0.1.0"
authors = ["UT UTP <ut.utp.group@gmail.com>"]
edition = "2018"

workspace = ".."

description = "A command line simulator for the LC-3 with additional peripherals."
homepage = "https://ut-utp.github.io"
repository = "http://github.com/ut-utp/tui"

readme = "README.md"

keywords = ["lc-3", "cli", "tui", "peripherals", "utp"]
categories = ["simulation", "command-line-utilities"]

license = "MPL-2.0"

[badges]
github-actions = { repository = "ut-utp/tui", workflow = "tui" }
codecov = { repository = "ut-utp/tui", branch = "master", service = "github" }

is-it-maintained-issue-resolution = { repository = "ut-utp/tui" }
is-it-maintained-open-issues = { repository = "ut-utp/tui" }
maintenance = { status = "actively-developed" }


[dependencies]
lc3-application-support = { git = "https://github.com/ut-utp/prototype", branch = "staging", version = "0.1.0" }
lc3-isa = { git = "https://github.com/ut-utp/prototype", branch = "staging", version = "0.1.0", default-features = false }
lc3-macros = { git = "https://github.com/ut-utp/prototype", branch = "staging", version = "0.1.0" }
lc3-shims = { git = "https://github.com/ut-utp/prototype", branch = "staging", version = "0.1.0" }
lc3-traits = { git = "https://github.com/ut-utp/prototype", branch = "staging", version = "0.1.0", default-features = false, features = [] } # Enable std features
lc3-os = { git = "https://github.com/ut-utp/prototype", branch = "staging", version = "0.1.0" }
lc3-assembler = { git = "https://github.com/ut-utp/assembler", branch = "master", version = "0.1.0" }
# TODO: change all of the above to grab the crates from crates.io instead of git
# TODO: get rid of the staging branch thing

annotate-snippets = "0.8.0"
chrono = "0.4"
crossbeam = "0.7.3"
failure = "0.1.6"
log = "0.4.8"
pin-utils = "0.1.0-alpha.4"
lazy_static = "1.4.0"

crossterm = "0.17.1"

# Version hack:
# No crossterm feature in the tui on wasm:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tui = { version = "0.8.0", default-features = false, features = ["crossterm"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tui = { version = "0.7.0", default-features = false}
#                  ^^^^^ awful hack! This tricks cargo into thinking this and
#                        the above are separate crates (which lets them have
#                        different features).
#
# Once this (https://github.com/rust-lang/cargo/issues/7914) hits stable, we
# won't need this anymore.

# The above needs to exist because we can't seem to conditionally enable
# features for dependencies; i.e. this doesn't work:
# ```
# [target.'cfg(not(target_arch = "wasm32"))'.dependencies.tui]
# features = ["crossterm"]
# ```
# See: https://github.com/rust-lang/cargo/issues/1197.
#
# As a workaround we tried to do the below (use a feature to enable the feature
# and have the feature only be enabled on specific architectures), but it also
# does not work. Once this (https://github.com/rust-lang/cargo/issues/7914)
# lands, it will work and we can ditch the above.
# ```
# [target.'cfg(not(target_arch = "wasm32"))'.features]
# default-features = ["tui/crossterm"]
# ```

[dev-dependencies]
pretty_assertions = "0.6.1"
