[package]
name = "lc3-tui"
version = "0.1.0"
authors = ["UT UTP <ut.utp.group@gmail.com>"]
edition = "2018"

workspace = ".."

description = "A command line simulator for the LC-3 with additional peripherals."
homepage = "https://ut-utp.github.io"
repository = "http://github.com/ut-utp/tui"

readme = "README.md"

keywords = ["lc-3", "cli", "tui", "peripherals", "utp"]
categories = ["simulation", "command-line-utilities"]

license = "MPL-2.0"

[badges]
github-actions = { repository = "ut-utp/tui", workflow = "tui" }
codecov = { repository = "ut-utp/tui", branch = "main", service = "github" }

is-it-maintained-issue-resolution = { repository = "ut-utp/tui" }
is-it-maintained-open-issues = { repository = "ut-utp/tui" }
maintenance = { status = "actively-developed" }


[dependencies]
lc3-application-support = "0.1.0"
lc3-isa = { version = "0.1.0", default-features = false }
lc3-macros = "0.1.0"
lc3-shims = "0.1.0"
lc3-traits = { version = "0.1.0", default-features = false, features = [] } # Enable std features
lc3-os = "0.1.0"
lc3-assembler = "0.1.0"

annotate-snippets = "0.8.0"
bytes = "0.5.5"
chrono = "0.4"
crossbeam = "0.7.3"
failure = "0.1.6"
log = "0.4.8"
pin-utils = "0.1.0-alpha.4"
lazy_static = "1.4.0"
reqwest = { version = "0.10.6", features = ["blocking"] }

# crossterm = { git = "https://github.com/ut-utp/crossterm", version = "0.17.3"}
# TODO: switch to not using this fork, eventually.

# crossterm = { git = "https://github.com/rrbutani/crossterm", version = "0.17.5" }
crossterm = { version = "0.17.5", features = ["event-stream"] } # technically we only need/use the event-stream feature on wasm but afaik there isn't yet a way to selectively enable features depending on the target.. (TODO: make this a feature that wasm targets have to enable and go and find the relevant cargo issue and link to it)

# tui = { git = "https://github.com/rrbutani/tui-rs", version = "0.9.5", default-features = false, features = ["crossterm"] }
tui = { version = "0.9.5", default-features = false, features = ["crossterm"] }
# Once PRs are submitted/merged, stop using these forks (TODO).

# # No crossterm dep on wasm.
# [target.'cfg(not(target_arch = "wasm32"))'.dependencies.cros !!sterm]
# version = "0.17.1"

# Version hack:
# No crossterm feature in the tui on wasm:
# [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# tui = { version = "0.8.0", default-features = false, features = ["crossterm"] }

# [target.'cfg(target_arch = "wasm32")'.dependencies]
# tui = { version = "0.7.0", default-features = false}
#                  ^^^^^ awful hack! This tricks cargo into thinking this and
#                        the above are separate crates (which lets them have
#                        different features).
#
# Once this (https://github.com/rust-lang/cargo/issues/7914) hits stable, we
# won't need this anymore.

# The above needs to exist because we can't seem to conditionally enable
# features for dependencies; i.e. this doesn't work:
# ```
# [target.'cfg(not(target_arch = "wasm32"))'.dependencies.tui]
# features = ["crossterm"]
# ```
# See: https://github.com/rust-lang/cargo/issues/1197.
#
# As a workaround we tried to do the below (use a feature to enable the feature
# and have the feature only be enabled on specific architectures), but it also
# does not work. Once this (https://github.com/rust-lang/cargo/issues/7914)
# lands, it will work and we can ditch the above.
# ```
# [target.'cfg(not(target_arch = "wasm32"))'.features]
# default-features = ["tui/crossterm"]
# ```

[target.'cfg(target_arch = "wasm32")'.dependencies]
futures-channel = "0.3"
futures-core = "0.3"
futures-util = "0.3"

# when we spin off rafi we should be able to remove these 3:
web-sys = "0.3"
js-sys = "0.3"
wasm-bindgen = "0.2"

xterm-js-sys = "4.6.0-alpha1" # TODO: bump

[dev-dependencies]
pretty_assertions = "0.6.1"
