[package]
name = "utp-tui-web"
version = "0.1.0"
authors = ["UT UTP <ut.utp.group@gmail.com>"]
edition = "2018"

workspace = "../.."

description = "An LC-3 simulator and debugger with a terminal user interface — for the web."
homepage = "https://utp.tools"
repository = "http://github.com/ut-utp/tui/tree/main/bins/web"

readme = "README.md"

# TODO!
# keywords = ["lc-3", "shims", "utp", "tui", wasm?]
# categories =

license = "MPL-2.0"

[badges]
# TODO!
# github-actions = { repository = "ut-utp/tui", workflow = "tui-desktop" }
# codecov = { repository = "ut-utp/tui", branch = "main", service = "github" }

is-it-maintained-issue-resolution = { repository = "ut-utp/tui" }
is-it-maintained-open-issues = { repository = "ut-utp/tui" }
maintenance = { status = "actively-developed" }


[dependencies]
console_log = { version = "0.2", features = ["color"] }
log = "0.4"
failure = "0.1.6"

lc3-application-support = "0.1.0"
lc3-tui = { path = "../../tui", version = "0.1.0" }

xterm-js-sys = "4.6.0-alpha1" # TODO: bump
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'DragEvent',
  'Event',
  'Element',
  'File',
  'HtmlElement',
  'Window',
  "Location",
  "Url",
  "UrlSearchParams",
]


[lib]
crate-type = ["cdylib"]


[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
debug-js-glue = true
demangle-name-section = true
dwarf-debug-info = true

[package.metadata.wasm-pack.profile.release]
# The version of wasm-opt that wasm-pack bundles crashes on current wasm-bindgen
# .wasm files. Current wasm-opt (version 93) crashes on the DWARF info that
# wasm-bindgen produces. So, we'll just disable wasm-opt for now.
# wasm-opt = false #["-O4"]
wasm-opt = ["-O4"]

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = false
dwarf-debug-info = false
